# rezeptur

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.development_setup/: install_dev_docker.sh
.github/workflows/: blank.yml  main_rezeptur.yml  workflow_ci.yml
api/: app.py  config.py  flask_config.py
api/application/: __init__.py  routes.py
api/application/static/styles/: styles.css
api/application/templates/: index.html
src/: setup.py
src/data_storage/: postgres_handler.py
src/utils/: helpers.py
