[tool.poetry]
name = "rezeptur"
version = "0.0.1"
description = ""
authors = ["Mahosaurus"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.0.1"
psycopg2 = "^2.9.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pre-commit = "^3.2.1"
pylint = "^2.17.1"
ipython = "^8.14.0"
ipykernel = "^6.23.2"
pytest-mock = "^3.11.1"
pytest-random-order = "^1.1.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
